[package]
name = "prometheus-sd-nexthop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8.6"
axum-prometheus = "0.9.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
rtnetlink = "0.18.1"
serde_json = "1.0.145"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["compression-gzip"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
